# chat-service

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: V1__create_messages_table.sql
src/: broker.rs  config.rs  db.rs  handlers.rs  main.rs  models.rs  presence.rs  route.rs  telemetry.rs  ws.rs
