[package]
name = "chat"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
hyper = { version = "1", features = ["http1", "http2", "server"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
# ✅ enable the env-filter feature
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
futures-util = "0.3"

redis = { version = "0.25", features = ["tokio-comp"] }
dotenvy = "0.15"
anyhow = "1"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "postgres", "uuid", "chrono", "macros"] }
